--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
-flask
-flask-sqlalchemy
-ipython
-psycopg2-binary
-sqlalchemy
+appnope==0.1.3
+autopep8==1.4.4
+backcall==0.2.0
+blinker==1.4
+click==8.1.3
+decorator==5.1.1
+Flask==2.2.3
+Flask-Cors==3.0.10
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
+importlib-metadata==6.0.0
+ipython==7.34.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.38
+psycopg2-binary==2.8.4
+ptyprocess==0.7.0
+pycodestyle==2.5.0
+Pygments==2.14.0
+six==1.16.0
+SQLAlchemy==2.0.7
+traitlets==5.9.0
+typing_extensions==4.5.0
+wcwidth==0.2.6
+Werkzeug==2.2.3
+zipp==3.15.0
